<resources>
    <string name="app_name">Swish</string>
    <string name="sign_in">Sign In</string>
    <string name="Create_exercise">Create exercise</string>
    <string name="exercise_type_sp">Choose exercise</string>
    <string name="finish_training">Finish</string>

    <string-array name="exercise_type">
        <item>Choose exercise:</item>
        <item>Shooting</item>
        <item>Dribbling</item>
        <item>Condition</item>
        <item>Physical</item>
    </string-array>

    <string name="exercise_tw">Exercise</string>
    <string name="exercise_name_tw">Name: </string>
    <string name="exercise_length_tw">Length: </string>
    <string name="exercise_description_tw">Description: </string>
    <string name="exercise_position_tw">Position: </string>
    <string name="exercise_repeats_tw">Sets: </string>
    <string name="exercise_timer_cb">Timer</string>
    <string name="app_title">Swish</string>
    <string name="register_text">Don\'t have an account?</string>
    <string name="sign_in_text">Login</string>
    <string name="training_name">Training name:</string>
    <string name="hint_training_title">Title your training</string>
    <string name="exercise_name">Exercise name</string>
    <string name="log_out">Log out</string>
    <string name="trainings">Trainings</string>
    <string name="completed_trainings">Completed trainings</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="privacy">
        <item>Everyone</item>
        <item>Only me</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Already have a account?</string>

</resources>

